@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5.1
 -----------------
 
+11/3/15
+    - Fixed a bug in psse_convert_xfmr() where conversion of data for
+      transformers with CZ=3 was done incorrectly. Thanks to Jose Marin
+      and Yujia Zhu.
+
 10/30/15
     - Fixed a bug in cpf_default_callback() introduced with the
       experimental updates regarding ZIP loads on 4/14/15.
